# StringWars

./: .gitignore  Cargo.toml  README.md  bench_encryption.md  bench_encryption.rs  bench_find.md  bench_find.py  bench_find.rs  bench_fingerprints.md  bench_fingerprints.py  bench_fingerprints.rs  bench_hash.md  bench_hash.py  bench_hash.rs  bench_memory.md  bench_memory.py  bench_memory.rs  bench_sequence.py  bench_sequence.rs  bench_similarities.md  bench_similarities.py  bench_similarities.rs  bench_similarity.rs  bench_sort.rs  bench_unicode.md  bench_unicode.py  bench_unicode.rs  pyproject.toml  requirements-cuda.txt  requirements.txt  units_formatter.rs  utils.py  utils.rs
.githooks/: pre-commit
.github/workflows/: release.yml
containers/: README.md  bench.py  bench.rs
encryption/: README.md  bench.py  bench.rs
find/: README.md  bench.py  bench.rs
fingerprints/: README.md  bench.py  bench.rs
hash/: README.md  bench.py  bench.rs
memory/: README.md  bench.py  bench.rs
normalization/: README.md  bench.py  bench.rs
sequence/: README.md  bench.py  bench.rs
similarities/: README.md  bench.py  bench.rs
tokenization/: README.md  bench.py  bench.rs
unicode/: bench.py  bench.rs
