[package]
authors = ["Ash Vardanian <1983160+ashvardanian@users.noreply.github.com>"]
categories = ["text-processing", "development-tools::profiling"]
description = "Comparing performance-oriented string-processing libraries for substring search, multi-pattern matching, hashing, edit-distances, sketching, and sorting across CPUs and GPUs in Rust 🦀"
edition = "2021"
homepage = "https://ashvardanian.com/posts/stringwars-on-gpus"
keywords = ["string", "benchmark", "simd", "gpu", "stringzilla"]
license = "Apache-2.0"
name = "stringwars"
readme = "README.md"
repository = "https://github.com/ashvardanian/StringWars"
version = "1.8.3"

[dependencies]
stringtape = "2.4.1"

# Published crate by default. For local StringZilla R&D, override it with a working copy through a
# gitignored `.cargo/config.toml` — no edits to this manifest, so nothing leaks into a commit:
#
#     paths = ["../StringZilla"]   # any semver-compatible local checkout (4.6.x satisfies ^4.5.0)
#
# Cargo's `paths` key replaces the registry source in place. If it ever reports the override
# "altered the list of dependencies", add a `[patch.crates-io]` table to this manifest TEMPORARILY
# and revert before committing — the manifest, unlike `.cargo/config.toml`, can't be gitignored.
#
# `default-features = false` keeps StringZilla's `dynamic-dispatch` feature OFF, so the SIMD backend
# is resolved at compile time (static dispatch) rather than via a per-call indirection. This is the
# fair default for these latency-sensitive benchmarks; do not add `stringzilla/dynamic-dispatch`.
stringzilla = {version = "4.5.0", default-features = false}

# Feature-based dependencies for benchmarks
[features]
bench_containers = [
  "xxhash-rust", # xxh3_128 for the double-hashing baseline
  "fastbloom", # SIMD Bloom filter with pluggable hasher
  "xorf", # Binary-fuse filter built from pre-hashed u64 keys
]
bench_encryption = [
  "ring", # Mozilla's AES-GCM, ChaCha20-Poly1305
  "openssl", # OpenSSL's AES-GCM, ChaCha20-Poly1305
  "sodiumoxide", # SodiumOxide's ChaCha20-Poly1305
  "getrandom", # OS random for key generation
  "rand", # Random number generation for keys
]
bench_find = [
  "memchr", # Substring search
  "bstr", # Byteset search
  "aho-corasick", # Byteset search
]
bench_fingerprints = [
  "probabilistic-collections", # MinHash
  "fork_union", # CPU core counting for device scopes
]
bench_hash = [
  "bit-set", # for collision counting
  "ahash", # aHash
  "xxhash-rust", # xxHash
  "wyhash", # wyhash
  "blake3", # Blake3
  "crc32fast", # CRC32
  "murmurhash32", # MurmurHash32
  "foldhash", # FoldHash
  "sha2", # SHA256
  "ring", # SHA256
  "cityhash", # CityHash (x86_64 only)
]
bench_memory = [
  "rand", # Randomize Buffer
  "zeroize", # Obfuscate Buffer
  "getrandom", # Randomize Buffer via OS
  "rand_chacha", # Randomize Buffer
  "rand_xoshiro", # Randomize Buffer
]
bench_normalization = [
  "icu", # Case mapping + NFC/NFD/NFKC/NFKD normalizers
  "unicase", # Case-insensitive string wrapper
  "rand", # Random needle sampling
  "unicode-normalization", # NFC/NFD/NFKC/NFKD normalization baseline
  "pcre2", # Full Unicode case folding in regex (unlike `regex` crate)
  "memchr", # Fast SIMD substring search (for ICU fold + search baseline)
]
bench_sequence = [
  "arrow", # Sorting
  "polars", # DataFrame library with sorting (single-threaded in the bench)
]
bench_similarities = [
  "rapidfuzz", # Levenshtein distance
  "bio", # Needleman-Wunsch score
  "fork_union", # Parallelizing RapidFuzz calls
]
bench_tokenization = [
  "icu", # Unicode properties, TR29 word/grapheme/sentence + UAX#14 line segmentation
  "simdutf", # SIMD UTF-8 validation and transcoding
  "unicode-segmentation", # UAX#29 word/grapheme/sentence segmentation
  "unicode-linebreak", # UAX#14 line-break opportunity segmentation
]
cuda = ["stringzilla/cuda"]
default = ["stringzilla/cpus"]

# TODO: String properties:
# - `unicode-width`
# - `textwrap`

[dependencies.memchr]
default-features = false
optional = true
version = "2.7.6"

[dependencies.bio]
default-features = false
features = ["runtime-dispatch-simd"]
optional = true
version = "3.0.0"

[dependencies.bstr]
default-features = false
optional = true
version = "1.12.1"

[dependencies.aho-corasick]
optional = true
version = "1.1.4"

[dependencies.icu]
default-features = false
features = ["compiled_data"]
optional = true
version = "2.1.1"

[dependencies.simdutf]
optional = true
version = "0.6"

[dependencies.unicase]
optional = true
version = "2.7"

[dependencies.unicode-segmentation]
optional = true
version = "1.12"

[dependencies.unicode-linebreak]
optional = true
version = "0.1.5"

[dependencies.unicode-normalization]
optional = true
version = "0.1"

[dependencies.regex]
optional = false
version = "1.12.2"

[dependencies.pcre2]
optional = true
version = "0.2"

[dependencies.rapidfuzz]
optional = true
version = "0.5.0"

[dependencies.fork_union]
optional = true
version = "2.3.0"

[dependencies.blake3]
optional = true
version = "1.6.1"

[dependencies.sha2]
optional = true
version = "0.10"

[dependencies.ring]
optional = true
version = "0.17"

[dependencies.openssl]
optional = true
version = "0.10.75"

[dependencies.sodiumoxide]
optional = true
version = "0.2"

[dependencies.crc32fast]
optional = true
version = "1.3.2"

[dependencies.murmurhash32]
optional = true
version = "0.3"

[dependencies.foldhash]
optional = true
version = "0.2"

[dependencies.ahash]
optional = true
version = "0.8"

[dependencies.xxhash-rust]
features = ["xxh3", "const_xxh3"]
optional = true
version = "0.8"

[dependencies.wyhash]
optional = true
version = "0.5"

[dependencies.twox-hash]
optional = true
version = "2.1.2"

[dependencies.arrow]
optional = true
version = "57.0.0"

[dependencies.fastbloom]
optional = true
version = "0.17"

[dependencies.xorf]
optional = true
version = "0.12"

[dependencies.rayon]
optional = true
version = "1.10.0"

[dependencies.polars]
default-features = false
features = ["lazy", "strings", "parquet", "regex", "timezones", "temporal"]
optional = true
version = "0.52"

[dependencies.zeroize]
optional = true
version = "1.8.2"

[dependencies.getrandom]
optional = true
version = "0.3.4"

[dependencies.rand]
optional = true
version = "0.9.2"

[dependencies.rand_chacha]
optional = true
version = "0.9.0"

[dependencies.rand_xoshiro]
optional = true
version = "0.7.0"

[dependencies.probabilistic-collections]
branch = "master"
git = "https://github.com/ashvardanian/probabilistic-collections-rs"
optional = true

[dependencies.bit-set]
optional = true
version = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.177"
perf-event = "0.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
cityhash = {version = "0.1", optional = true}

[[bench]]
harness = false
name = "bench_find"
path = "find/bench.rs"
required-features = ["bench_find"]

[[bench]]
harness = false
name = "bench_tokenization"
path = "tokenization/bench.rs"
required-features = ["bench_tokenization"]

[[bench]]
harness = false
name = "bench_normalization"
path = "normalization/bench.rs"
required-features = ["bench_normalization"]

[[bench]]
harness = false
name = "bench_similarities"
path = "similarities/bench.rs"
required-features = ["bench_similarities"]

[[bench]]
harness = false
name = "bench_hash"
path = "hash/bench.rs"
required-features = ["bench_hash"]

[[bench]]
harness = false
name = "bench_sequence"
path = "sequence/bench.rs"
required-features = ["bench_sequence"]

[[bench]]
harness = false
name = "bench_containers"
path = "containers/bench.rs"
required-features = ["bench_containers"]

[[bench]]
harness = false
name = "bench_memory"
path = "memory/bench.rs"
required-features = ["bench_memory"]

[[bench]]
harness = false
name = "bench_fingerprints"
path = "fingerprints/bench.rs"
required-features = ["bench_fingerprints"]

[[bench]]
harness = false
name = "bench_encryption"
path = "encryption/bench.rs"
required-features = ["bench_encryption"]

[profile.release]
# Incremental release builds: after the first full optimize, editing a single bench.rs
# recompiles only the changed codegen units instead of the whole crate, cutting the
# measurement-build turnaround. Dependency crates (where the kernels live) stay fully cached.
incremental = true
