[project]
name = "stringwars"
version = "1.8.3"
description = "Comparing performance-oriented string-processing libraries for substring search, multi-pattern matching, hashing, edit-distances, sketching, and sorting across CPUs and GPUs in Python 🐍"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Ash Vardanian", email = "1983160+ashvardanian@users.noreply.github.com" },
]
license = { text = "Apache 2.0" }

# Keep the base install minimal; opt into extras per-bench
dependencies = []

[project.urls]
Homepage = "https://ashvardanian.com/posts/stringwars-on-gpus"
Repository = "https://github.com/ashvardanian/StringWars"

[project.optional-dependencies]
# Substring/byteset + transforms
find = ["stringzilla>=4.5.0", "pyahocorasick"]

# Sequence ops (split/sort)
sequence = ["stringzilla>=4.5.0", "numpy", "pandas", "pyarrow", "polars"]

# Fingerprinting/sketching
fingerprints = [
  "stringzilla>=4.5.0",
  "stringzillas-cpus",
  "datasketch",
  "numpy",
  "tqdm",
]

# Similarities / edit distances
similarities = [
  "stringzilla>=4.5.0",
  "stringzillas-cpus",
  "jellyfish",
  "python-Levenshtein",
  "editdistance",
  "rapidfuzz",
  "nltk",
  "edlib",
  "biopython",
  "polyleven",
]

# Hash functions
hash = [
  "stringzilla>=4.5.0",
  "xxhash",
  "blake3",
  "google-crc32c",
  "mmh3",
  "cityhash",
]

# Random byte generators and translation tables
memory = ["stringzilla>=4.5.0", "numpy", "pycryptodome", "opencv-python"]

# UTF-8 tokenization / iteration (whitespace, newline, TR29 words, codepoints)
tokenization = ["stringzilla>=4.5.0", "regex", "PyICU"]

# Case folding + Unicode normalization
normalization = ["stringzilla>=4.5.0", "regex", "PyICU"]

[tool.ruff]
# Enforce 120-column lines across formatting and linting
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle (errors)
  "W",  # pycodestyle (warnings)
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "B",  # flake8-bugbear
]
ignore = [
  # Allow module-level prints in bench scripts
  "T201",
]

[tool.ruff.lint.isort]
# Group the local `utils` module into its own final import block
known-first-party = ["utils"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# If you prefer Black interoperability, mirror line length
[tool.black]
line-length = 120
target-version = ["py313"]

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"
