[project]
authors = [
  {name = "Ash Vardanian", email = "1983160+ashvardanian@users.noreply.github.com"},
]
description = "Comparing performance-oriented string-processing libraries for substring search, multi-pattern matching, hashing, edit-distances, sketching, and sorting across CPUs and GPUs in Python 🐍"
license = {text = "Apache 2.0"}
name = "stringwars"
readme = "README.md"
requires-python = ">=3.13"
version = "1.8.3"

# Keep the base install minimal; opt into extras per-bench
dependencies = []

[project.urls]
Homepage = "https://ashvardanian.com/posts/stringwars-on-gpus"
Repository = "https://github.com/ashvardanian/StringWars"

[project.optional-dependencies]
# Substring/byteset + transforms
find = ["stringzilla>=4.5.0", "pyahocorasick"]

# Sequence ops (split/sort)
sequence = ["stringzilla>=4.5.0", "numpy", "pandas", "pyarrow", "polars"]

# Fingerprinting/sketching
fingerprints = [
  "stringzilla>=4.5.0",
  "stringzillas-cpus",
  "datasketch",
  "numpy",
  "tqdm",
]

# Similarities / edit distances
similarities = [
  "stringzilla>=4.5.0",
  "stringzillas-cpus",
  "jellyfish",
  "python-Levenshtein",
  "editdistance",
  "rapidfuzz",
  "nltk",
  "edlib",
  "biopython",
  "polyleven",
]

# Hash functions
hash = [
  "stringzilla>=4.5.0",
  "xxhash",
  "blake3",
  "google-crc32c",
  "mmh3",
  "cityhash",
]

# Random byte generators and translation tables
memory = ["stringzilla>=4.5.0", "numpy", "pycryptodome", "opencv-python"]

# UTF-8 tokenization / iteration (whitespace, newline, TR29 words, codepoints)
tokenization = ["stringzilla>=4.5.0", "regex", "PyICU"]

# Case folding + Unicode normalization
normalization = ["stringzilla>=4.5.0", "regex", "PyICU"]

# Multi-way hashing + probabilistic membership
containers = ["stringzilla>=4.5.0", "pyprobables", "xxhash", "numpy"]

# AEAD encryption/decryption (ChaCha20-Poly1305, AES-256-GCM)
encryption = ["cryptography", "pycryptodome", "pynacl"]

[tool.ruff]
# Enforce 120-column lines across formatting and linting
line-length = 120
target-version = "py313"

[tool.ruff.lint]
ignore = [
  # Allow module-level prints in bench scripts
  "T201",
]
select = [
  "E", # pycodestyle (errors)
  "W", # pycodestyle (warnings)
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "B", # flake8-bugbear
]

[tool.ruff.lint.isort]
# Group the local `utils` module into its own final import block
known-first-party = ["utils"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "preserve"
skip-magic-trailing-comma = false

# If you prefer Black interoperability, mirror line length
[tool.black]
line-length = 120
target-version = ["py313"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.21.1"]
